--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf .next out"
   },
   "dependencies": {
+    "@cloudflare/stream-react": "^1.9.3",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
