--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ node_modules
 
 # Sentry Config File
 .env.sentry-build-plugin
+
+# backup files
+*BAK*
+*.bak
+/app/components/backup/
+/app/components/cotizador/backup/
+/components/cotizador/backup/
+/app/cotizar/components/backup/
