--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "export": "next build && next export",
-    "clean": "rm -rf .next out"
+    "clean": "rm -rf .next out",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "test": "echo 'No tests configured yet'"
   },
   "dependencies": {
     "@cloudflare/stream-react": "^1.9.3",
