--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.10.6",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.2.18",
