--- a/package.json
+++ b/package.json
@@ -48,16 +48,18 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.10.6",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.31",
+    "postcss-import": "15.1.0",
     "react": "^18.2.0",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
   }
 }
