--- a/auditoria_gardcl/20250814/80_CI_CD/lhci.yml
+++ b/auditoria_gardcl/20250814/80_CI_CD/lhci.yml
@@ -1,18 +1,19 @@
 ci:
   collect:
     numberOfRuns: 3
+    url:
+      - https://www.gard.cl/
+      - https://www.gard.cl/servicios
+      - https://www.gard.cl/contacto
     settings:
       preset: mobile
-      url:
-        - https://www.gard.cl/
-        - https://www.gard.cl/servicios
-        - https://www.gard.cl/contacto
   assert:
     assertions:
       categories:performance: [error, {minScore: 0.95}]
       categories:accessibility: [error, {minScore: 0.95}]
       categories:seo: [error, {minScore: 0.95}]
       categories:best-practices: [error, {minScore: 0.95}]
-      metrics/lcp: [error, {maxNumericValue: 2500}]
-      metrics/cls: [error, {maxNumericValue: 0.1}]
-      metrics/interactive: [warn, {maxNumericValue: 5000}]
+      largest-contentful-paint: [error, {maxNumericValue: 2500, aggregationMethod: median}]
+      cumulative-layout-shift: [error, {maxNumericValue: 0.1, aggregationMethod: p75}]
+      interactive: [warn, {maxNumericValue: 5000, aggregationMethod: median}]
+      total-blocking-time: [warn, {maxNumericValue: 400, aggregationMethod: median}]
