--- a/auditoria_gardcl/20250814/80_CI_CD/lhci.yml
+++ b/auditoria_gardcl/20250814/80_CI_CD/lhci.yml
@@ -6,7 +6,13 @@ ci:
       - https://www.gard.cl/servicios
       - https://www.gard.cl/contacto
     settings:
-      preset: mobile
+      formFactor: mobile
+      screenEmulation:
+        mobile: true
+        width: 360
+        height: 640
+        deviceScaleFactor: 2.625
+        disabled: false
   assert:
     assertions:
       categories:performance: [error, {minScore: 0.95}]
